--- a/Rider/src/assets/i18n/en.json
+++ b/Rider/src/assets/i18n/en.json
@@ -80,6 +80,12 @@
   "INTERNAL_ERROR_TITLE": "⚙️ Internal Error",
   "INTERNAL_ERROR_DETAIL": "An internal Firebase error occurred.",
   "INTERNAL_ERROR_CAUSE": "📋 Possible Causes:\n• Firebase service temporary outage\n• Configuration issue\n• API key problem\n\n💡 Check Firebase Console for service status.",
+  "REGION_NOT_ALLOWED_TITLE": "🚫 Region Not Allowed",
+  "REGION_NOT_ALLOWED_DETAIL": "SMS authentication is not enabled for your region/country in the Firebase Console.",
+  "REGION_NOT_ALLOWED_CAUSE": "📋 How to fix:\n1. Open Firebase Console\n2. Go to Authentication → Settings\n3. Enable your country in 'SMS Region Policy'\n4. Ensure Phone Auth is enabled in Providers",
+  "UNAUTHORIZED_DOMAIN_TITLE": "🌐 Unauthorized Domain",
+  "UNAUTHORIZED_DOMAIN_DETAIL": "This domain is not authorized for Firebase Authentication.",
+  "UNAUTHORIZED_DOMAIN_CAUSE": "📋 How to fix:\n1. Open Firebase Console\n2. Go to Authentication → Settings\n3. Add this domain to 'Authorized domains'",
   "TEST_MODE_OFFER": "Would you like to use Test Mode to continue?",
   "CLOSE": "Close",
   "USE_TEST_MODE": "Use Test Mode",
