--- a/Driver/src/assets/i18n/en.json
+++ b/Driver/src/assets/i18n/en.json
@@ -236,5 +236,11 @@
   "SIGNIN_CANCELLED": "Sign in was cancelled.",
   "NETWORK_ERROR": "Network error. Please check your connection.",
   "ERROR": "Error",
-  "CONTINUE": "Continue"
-} 
+  "CONTINUE": "Continue",
+  "REGION_NOT_ALLOWED_TITLE": "🚫 Region Not Allowed",
+  "REGION_NOT_ALLOWED_DETAIL": "SMS authentication is not enabled for your region/country in the Firebase Console.",
+  "REGION_NOT_ALLOWED_CAUSE": "📋 How to fix:\n1. Open Firebase Console\n2. Go to Authentication → Settings\n3. Enable your country in 'SMS Region Policy'\n4. Ensure Phone Auth is enabled in Providers",
+  "UNAUTHORIZED_DOMAIN_TITLE": "🌐 Unauthorized Domain",
+  "UNAUTHORIZED_DOMAIN_DETAIL": "This domain is not authorized for Firebase Authentication.",
+  "UNAUTHORIZED_DOMAIN_CAUSE": "📋 How to fix:\n1. Open Firebase Console\n2. Go to Authentication → Settings\n3. Add this domain to 'Authorized domains'"
+}
