--- a/Rider/src/assets/i18n/ms.json
+++ b/Rider/src/assets/i18n/ms.json
@@ -80,6 +80,12 @@
   "INTERNAL_ERROR_TITLE": "⚙️ Ralat Dalaman",
   "INTERNAL_ERROR_DETAIL": "Ralat dalaman Firebase berlaku.",
   "INTERNAL_ERROR_CAUSE": "📋 Punca Yang Mungkin:\n• Gangguan perkhidmatan Firebase sementara\n• Masalah konfigurasi\n• Masalah kunci API\n\n💡 Semak Konsol Firebase untuk status perkhidmatan.",
+  "REGION_NOT_ALLOWED_TITLE": "🚫 Rantau Tidak Dibenarkan",
+  "REGION_NOT_ALLOWED_DETAIL": "Pengesahan SMS tidak diaktifkan untuk rantau/negara anda dalam Konsol Firebase.",
+  "REGION_NOT_ALLOWED_CAUSE": "📋 Cara penyelesaian:\n1. Buka Konsol Firebase\n2. Pergi ke Authentication → Settings\n3. Benarkan negara anda dalam 'SMS Region Policy'\n4. Pastikan Phone Auth diaktifkan dalam Providers",
+  "UNAUTHORIZED_DOMAIN_TITLE": "🌐 Domain Tidak Dibenarkan",
+  "UNAUTHORIZED_DOMAIN_DETAIL": "Domain ini tidak dibenarkan untuk Pengesahan Firebase.",
+  "UNAUTHORIZED_DOMAIN_CAUSE": "📋 Cara penyelesaian:\n1. Buka Konsol Firebase\n2. Pergi ke Authentication → Settings\n3. Tambah domain ini ke dalam 'Authorized domains'",
   "TEST_MODE_OFFER": "Adakah anda ingin menggunakan Mod Ujian untuk meneruskan?",
   "CLOSE": "Tutup",
   "USE_TEST_MODE": "Guna Mod Ujian",
