feat(localization): improve Malay translations and set English fallback across monorepo
This commit includes:
- Integrated ngx-translate into Admin app
- Completed Malay translations (ms.json) for Driver and Admin apps
- Set English as default and fallback language in all app modules
- Localized Admin sidebar and logout alert
- Enabled TranslateModule.forChild() in all Admin sub-page modules

--- a/Admin/src/assets/i18n/en.json
+++ b/Admin/src/assets/i18n/en.json
@@ -127,12 +127,20 @@
   "ENGLISH": "English",
   "ARABIC": "Arabic",
   "MENU": {
-    "HOME": "Home",
-    "HISTORY": "History",
-    "PAYMENT": "Payment",
-    "PROMOTION": "Promotion",
-    "SUPPORT": "Support",
-    "ABOUT": "About"
+    "HOME": "Dashboard",
+    "HISTORY": "All Trips",
+    "DRIVERS": "Drivers",
+    "RIDERS": "Riders",
+    "CARTYPES": "Car Types",
+    "PRICES": "Prices",
+    "DOCUMENTS": "Documents",
+    "SUPPORT": "Live Support",
+    "PAYOUT": "Payout",
+    "SETTINGS": "General Settings",
+    "ABOUT": "About",
+    "LOGOUT": "Logout",
+    "LOGOUT_CONFIRM_TITLE": "Logout",
+    "LOGOUT_CONFIRM_MESSAGE": "Are you sure you want to logout?"
   },
   "REGION_NOT_ALLOWED_TITLE": "🚫 Region Not Allowed",
   "REGION_NOT_ALLOWED_DETAIL": "SMS authentication is not enabled for your region/country in the Firebase Console.",
