feat: Implement OTP and login pages for the Driver app and a profile page with i18n support for the Rider app.

--- a/Rider/src/assets/i18n/en.json
+++ b/Rider/src/assets/i18n/en.json
@@ -30,6 +30,9 @@
   "EXPERIENCE_PLACEHOLDER": "Tell us about your experience...",
   "SUBMIT_RATING": "Submit Rating",
   "CONTINUE": "Continue",
+  "GUEST": "Guest",
+  "PERSONAL_DETAILS": "Personal Details",
+  "NAME": "Name",
   "SELECT_COUNTRY": "Select Country",
   "MOBILE_NUMBER": "Mobile Number",
   "MOBILE_REQUIRED": "Please enter the Mobile Number",
