--- a/Rider/src/assets/i18n/ms.json
+++ b/Rider/src/assets/i18n/ms.json
@@ -30,6 +30,9 @@
   "EXPERIENCE_PLACEHOLDER": "Beritahu kami tentang pengalaman anda...",
   "SUBMIT_RATING": "Hantar Penilaian",
   "CONTINUE": "Teruskan",
+  "GUEST": "Tetamu",
+  "PERSONAL_DETAILS": "Butiran Peribadi",
+  "NAME": "Nama",
   "SELECT_COUNTRY": "Pilih Negara",
   "MOBILE_NUMBER": "Nombor Telefon",
   "MOBILE_REQUIRED": "Sila masukkan Nombor Telefon",
